Provide interactive feedback for notification buttons.

--- a/src/app/pages/profile-page/notification-devices/notification-devices.component.html
+++ b/src/app/pages/profile-page/notification-devices/notification-devices.component.html
@@ -37,11 +37,11 @@
       <div>You can send a test notification to every device and application based on your settings</div>
     </div>
     <div>
-      <div class="mrw-button test-button" (click)="sendTestAlert.emit(true)">TEST</div> <span class="test-text">Send alert level notification</span>
+      <button mat-button class="mrw-button test-button" (click)="sendTestAlert.emit(true)">TEST</button> <span class="test-text">Send alert level notification</span>
     </div>
 
     <div>
-      <div class="mrw-button test-button" (click)="sendTestNotification.emit(true)">TEST</div> <span class="test-text">Send general level notification</span>
+      <button mat-button class="mrw-button test-button" (click)="sendTestNotification.emit(true)">TEST</button> <span class="test-text">Send general level notification</span>
     </div>
   </div>
 </div>
