--- a/src/assets/scss/_notifications.scss
+++ b/src/assets/scss/_notifications.scss
@@ -256,6 +256,7 @@ snack-bar-container {
     background-color: #00C9A6;
     color: white;
     border-color: #00C9A6;
+    min-width: 60px;
 
     &--solo {
       margin-top: 40px;
