--- a/src/app/pages/customer-advanced-page/order-detailed/order-detailed.component.scss
+++ b/src/app/pages/customer-advanced-page/order-detailed/order-detailed.component.scss
@@ -125,17 +125,22 @@
         color: #1EBEA5;
       }
 
-      .link {
+      .shipment-details {
         position: relative;
         margin-left: 15px;
         color: #2C98F0;
-        cursor: pointer;
-        font-size: 13px;
+        z-index: 1;
+
+        .link {
+          cursor: pointer;
+          font-size: 13px;
+        }
 
         shipment-status {
           position: absolute;
           top: 0;
           left: 0;
+          box-shadow: 0 3px 6px rgba(0,0,0,0.25);
         }
       }
 
