--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.scss
@@ -57,3 +57,11 @@
 .input-form {
   width: 650px;
 }
+
+.text {
+  font-size: 12px;
+  margin-top: 20px;
+  color: #b71c1c;
+  cursor: pointer;
+}
+
