--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-add-new/affiliate-add-new.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-add-new/affiliate-add-new.component.html
@@ -1,19 +1,25 @@
-<div class="entity-view__card entity-view__card--create" style="margin: auto">
+<div class="entity-view__card entity-view__card--create" style="margin: auto" [class.view-display]="displayInView">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">{{'AFFILIATE_INFO_CREATETITLE' | translate}}</div>
+    <div class="entity-view__card__header__title">{{(mode === modes.Add ? 'AFFILIATE_INFO_CREATETITLE' : 'AFFILIATE_TAB_GENERAL') | translate}}</div>
+    <ng-container *ngIf="mode === modes.View">
+      <mat-icon [matMenuTriggerFor]="editOptions">more_vert</mat-icon>
+      <mat-menu #editOptions="matMenu" x-position="before">
+        <button mat-menu-item (click)="changeMode.emit(modes.Update);">{{'AFFILIATE_INFO_EDIT' | translate}}</button>
+      </mat-menu>
+    </ng-container>
   </div>
 
   <div class="entity-view__card__content">
     <mat-form-field [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-      <input auto-focus required matInput placeholder="{{'AFFILIATE_INFO_NAME' | translate}}" [(ngModel)]="entity.name" type="text">
+      <input [disabled]="mode === modes.View" auto-focus required matInput placeholder="{{'AFFILIATE_INFO_NAME' | translate}}" [(ngModel)]="entity.name" type="text">
     </mat-form-field>
 
     <mat-form-field [class.error]="formInvalid && !entity.affiliateId" class="entity-view__card__content__item">
-      <input required matInput placeholder="{{'AFFILIATE_INFO_ID' | translate}}" [(ngModel)]="entity.affiliateId" type="text">
+      <input [disabled]="mode === modes.View" required matInput placeholder="{{'AFFILIATE_INFO_ID' | translate}}" [(ngModel)]="entity.affiliateId" type="text">
     </mat-form-field>
   </div>
 
-  <div class="entity-view__card__actions">
+  <div *ngIf="mode !== modes.View" class="entity-view__card__actions">
     <div (click)="cancel.emit(true)">{{'AFFILIATE_INFO_CANCEL' | translate}}</div>
     <div (click)="saveAffiliate()">{{'AFFILIATE_INFO_SAVE' | translate}}</div>
   </div>
