--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -1,53 +1,24 @@
 <div  *ngIf="entity; else spinner" class="entity-view">
-  <entity-view-breadcrumbs [items]="breadcrumbs"></entity-view-breadcrumbs>
 
-  <div (click)="navigation.back()" class="entity-view__change-mode"><mat-icon>reply</mat-icon></div>
-
-  <div class="entity-view__info">
-    <div class="entity-view__info__image">
-      <img src="/assets/images/result-item-customer-white.svg" alt="">
-    </div>
-    <div class="entity-view__info__data">
-      <div class="entity-view__info__data__date">{{'SINGLEPAGE_CREATED' | translate}}: {{entity.createdAt | formatDateTime: 'date-time'}}</div>
-
-      <form #inputForm="ngForm">
-        <div class="entity-view__info__data__name">
-          <span *ngIf="viewMode; else nameEdit">{{entity.name}}</span>
-
-          <ng-template #nameEdit>
-            <mat-form-field>
-              <input matInput #nameInputField [class.error]="formInvalid && !entity.name" required [(ngModel)]="entity.name" name="name">
-            </mat-form-field>
-          </ng-template>
-        </div>
-
-        <div class="entity-view__info__data__other">
-          <span class="entity-view__info__data__other__label">{{'AFFILIATE_INFO_ID' | translate}}:</span>
-          <span *ngIf="viewMode; else affidEdit">{{entity.affiliateId}}</span>
-
-          <ng-template #affidEdit>
-            <mat-form-field [class.error]="formInvalid && !entity.affiliateId">
-              <input matInput required [(ngModel)]="entity.affiliateId" name="affiliateId">
-            </mat-form-field>
-          </ng-template>
-        </div>
-      </form>
-
-    </div>
-
-    <div class="entity-view__info__edit">
-      <div *ngIf="viewMode; else editActions" class="entity-view__info__edit__update" (click)="editAffiliate()">{{'AFFILIATE_INFO_EDIT' | translate}}</div>
-
-      <ng-template #editActions>
-        <div *ngIf="updateMode" (click)="cancelEdit()">{{'AFFILIATE_INFO_CANCEL' | translate}}</div>
-        <div class="entity-view__info__edit__update" (click)="saveAffiliate(inputForm.form.valid)">{{(updateMode ? 'AFFILIATE_INFO_UPDATE' : 'AFFILIATE_INFO_SAVE') | translate}}</div>
-      </ng-template>
-    </div>
-  </div>
+  <blue-header [items]="breadcrumbs" [titleValue]="entity.name"></blue-header>
 
   <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
   <mat-tab-group *ngIf="!addMode" [(selectedIndex)]="selectedIndex">
+
+    <mat-tab>
+      <div class="tab-container">
+        <!--(save)="createEntity($event)"-->
+        <affiliate-add-new
+          [displayInView]="!addMode"
+          [mode]="viewMode ? modes.View : modes.Update"
+          (changeMode)="setMode($event)"
+          (save)="saveAffiliate(true)"
+          (cancel)="cancelEdit()"
+          [entity]="entity">
+        </affiliate-add-new>
+      </div>
+    </mat-tab>
 
     <mat-tab>
       <div class="tab-container">
