--- a/src/app/shared/components/filter-input/filter-input.component.scss
+++ b/src/app/shared/components/filter-input/filter-input.component.scss
@@ -1,14 +1,18 @@
 .search-container {
+  margin-left: 3px;
   font-size: 14px;
   font-weight: normal;
+  width: 0;
+  padding: 0;
+  overflow: hidden;
+  transition: all 250ms ease-in-out;
+  background: rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  color: rgba(0, 0, 0, 0.54);
 }
 
 .search-visible {
-  width: 150px;
-  transition: width 250ms ease-in-out;
-}
-
-mat-form-field {
-  width: 0;
-  transition: width 250ms ease-in-out;
+  width: 190px;
+  padding: 0 10px;
+  transition: all 250ms ease-in-out;
 }
