--- a/src/app/pages/components/table-preferences/table-preferences.component.scss
+++ b/src/app/pages/components/table-preferences/table-preferences.component.scss
@@ -15,7 +15,7 @@
 .params-container {
   position: absolute;
   top: 0;
-  right: 25px;
+  right: 0;
   z-index: 2;
   background: white;
   box-shadow: 0 0 5px rgba(0,0,0,0.2);
