--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -136,7 +136,7 @@ $title-color: #8D8888;
 
       tr th {
         position: relative;
-        padding: 15px 20px 15px 5px !important;
+        padding: 15px 20px 15px 10px !important;
         color: rgba(0, 0, 0, 0.54);
         font-weight: 500;
         font-size: 12px;
@@ -227,7 +227,7 @@ $title-color: #8D8888;
       }
 
       tr td {
-        padding: 5px 20px 5px 5px;
+        padding: 5px 20px 5px 10px;
         cursor: pointer;
 
         &:first-child {
@@ -254,9 +254,10 @@ $title-color: #8D8888;
 
     &__buttons {
       margin-right: 15px;
+      padding: 10px 0;
       text-align: right;
       color: #757575;
-      font-size: 16px;
+      font-size: 18px;
     }
 
     &--no-margin {
