--- a/src/app/navigation/layouts/default/default.layout.component.html
+++ b/src/app/navigation/layouts/default/default.layout.component.html
@@ -9,7 +9,7 @@
     <app-sidenav [isHovering]="isHovering || showSidenav || navigation.mediumScreenAndDown"></app-sidenav>
   </mat-sidenav>
 
-  <mat-sidenav-content (scroll)="onScroll($event)" [class.container--hover]="!(navigation.showSidenav | async) && showOnHover">
+  <mat-sidenav-content [class.container--hover]="!(navigation.showSidenav | async) && showOnHover">
     <header>
       <app-topnav [isInvitedUser]="isInvitedUser" (invitedUserInstructionsDismissed)="isInvitedUser = false"></app-topnav>
     </header>
